--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 
 services:
-  api:
-    container_name: "snippet-runner"
+  snippet-permissions:
+    container_name: "snippet-permissions"
     build:
       context: .
       dockerfile: Dockerfile.dev
