--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,13 +2,13 @@ spring:
   application:
     name: snippet-perms
   datasource:
-    url: jdbc:postgresql://localhost:5432/compose-db
+    url: ${DB_URL}
     username: ${DB_USER}
     password: ${DB_PASSWORD}
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-    ddl-auto: update
+      ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
