--- a/.github/workflows/master_cd.yml
+++ b/.github/workflows/master_cd.yml
@@ -34,7 +34,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: ghcr.io/ingsis-group2/snippet-permissions-master:${{ steps.short-sha.outputs.sha }}
+          tags: ghcr.io/ingsis-group2:${{ steps.short-sha.outputs.sha }}
           build-args: |
             GITHUB_ACTOR=${{ github.actor }}
             GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
