--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,10 +1,9 @@
-name: "Continuous Deployment Master"
+name: "Continuous Deployment"
 
 on:
   workflow_run:
     workflows: [ "Java CI with Gradle" ]
-    branches:
-      - master
+    branches: [master,dev]
     types:
       - completed
 
@@ -34,7 +33,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: ghcr.io/ingsis-group2:${{ steps.short-sha.outputs.sha }}
+          tags: ghcr.io/ingsis-group2/snippet-permissions:${{ steps.short-sha.outputs.sha }}
           build-args: |
             GITHUB_ACTOR=${{ github.actor }}
             GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
