--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,4 +33,4 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: ghcr.io/ingsis-group2:${{ steps.short-sha.outputs.sha }}
+          tags: ghcr.io/ingsis-group2/echo:${{ steps.short-sha.outputs.sha }}
