--- a/.github/workflows/cd_master.yml
+++ b/.github/workflows/cd_master.yml
@@ -3,13 +3,14 @@ name: "Continuous Deployment"
 on:
   workflow_run:
     workflows: [ "Java CI with Gradle" ]
-    branches: [master,dev]
+    branches:
+      - master
     types:
       - completed
 
 jobs:
-  push_to_registry:
-    name: Push Docker image to GitHub Packages
+  push_snippet_permissions:
+    name: Push snippet-runner image to ghcr.io
     runs-on: ubuntu-latest
     steps:
       - name: Create Short SHA
@@ -17,20 +18,20 @@ jobs:
         id: short-sha
         with:
           length: 8
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Push to GitHub Packages
         id: docker_build
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: ghcr.io/ingsis-group2/echo:${{ steps.short-sha.outputs.sha }}
+          tags: ghcr.io/ingsis-group2/snippet-permisiions-master:latest
+          build-args: |
+            GITHUB_ACTOR=${{ github.actor }}
+            GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
