--- a/.github/workflows/cd_dev.yml
+++ b/.github/workflows/cd_dev.yml
@@ -32,6 +32,13 @@ jobs:
         with:
           push: true
           tags: ghcr.io/ingsis-group2/snippet-permissions-master:latest
-          build-args: |
-            GITHUB_ACTOR=${{ github.actor }}
-            GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+      - name: Deploy to VM
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.VM_IP_DEV }}
+          username: "azureuser"
+          key: ${{ secrets.PRIVATE_KEY_DEV }}
+          script: |
+            cd snippet-infra
+            sudo docker compose -f docker-compose.dev.yml stop snippet-permissions
+            sudo docker compose -f docker-compose.dev.yml up snippet-permissions -d --build 
