--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,9 @@ DB_HOST = ''
 DB_PORT = ''
 DB_USER = ''
 DB_PASSWORD = ''
+
+AUTH0_AUDIENCE = ''
+
+AUTH_SERVER_URI = ''
+AUTH_CLIENT_ID = ''
+AUTH_CLIENT_SECRET = ''
