--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,3 +15,11 @@ spring:
 
 server:
   port: 8081
+
+
+okta:
+  oauth2:
+    issuer: ${AUTH_SERVER_URI}
+    audience: ${AUTH0_AUDIENCE}
+    client-id: ${AUTH_CLIENT_ID}
+    client-secret: ${AUTH_CLIENT_SECRET}
