--- a/.github/workflows/cd_dev.yml
+++ b/.github/workflows/cd_dev.yml
@@ -31,6 +31,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
+          no-cache: true
           tags: ghcr.io/ingsis-group2/snippet-permissions-dev:latest
       - name: Deploy to VM
         uses: appleboy/ssh-action@master
