--- a/.github/workflows/cd_dev.yml
+++ b/.github/workflows/cd_dev.yml
@@ -30,6 +30,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
+          no-cache: true
           tags: ghcr.io/ingsis-group2/snippet-permissions-dev:latest
           build-args: |
             DB_USER=${{ secrets.DB_USER }}
