--- a/.github/workflows/cd_master.yml
+++ b/.github/workflows/cd_master.yml
@@ -31,6 +31,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
+          no-cache: true
           tags: ghcr.io/ingsis-group2/snippet-permissions-master:latest
           build-args: |
             DB_USER=${{ secrets.DB_USER }}
